--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -76,11 +76,16 @@ html {
 }
 
 /* About section */
-.sidebar-about h1 {
-  color: #fff;
-  margin-top: 0;
-  font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+.sidebar-about {
+  text-align: center;
+}
+.sidebar-about > a img {
+  display: inline-block;
+  height: 12rem;
+}
+.sidebar-about > p img {
+  display: inline-block;
+  width: 16rem;
 }
 
 /* Sidebar nav */
@@ -136,6 +141,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 64em) {
   .content {
+    max-width: 50vw;
     margin-left: 22rem;
     margin-right: 4rem;
   }
