--- a/themes/hyde/layouts/_default/list.html
+++ b/themes/hyde/layouts/_default/list.html
@@ -5,7 +5,8 @@
 
   <div class="content container">
     <ul class="posts">
-      {{ range .Data.Pages }}
+      {{ $paginator := .Paginate (where .Data.Pages "Type" "posts") }}
+      {{ range $paginator.Pages }}
       <li>
         <span><a href="{{ .Permalink }}">{{ .Title }}</a> <time class="pull-right post-list">{{ .Date.Format "Mon, Jan 2, 2006" }}</time></span>
       </li>
