--- a/themes/hyde/layouts/index.html
+++ b/themes/hyde/layouts/index.html
@@ -5,8 +5,8 @@
 
     <div class="content container">
 <div class="posts">
-
-      {{ range .Data.Pages }}
+      {{ $paginator := .Paginate (where .Data.Pages "Type" "posts") }}
+      {{ range $paginator.Pages }}
   <div class="post">
     <h1 class="post-title">
       <a href="{{ .Permalink }}">
@@ -14,7 +14,7 @@
       </a>
     </h1>
 
-    <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+    <span class="post-date">{{ .Date.Format "2006/01/02(Mon)" }}</span>
 
     {{ .Content }}
   </div>
